# AI-BUILDER-PATH

./: .gitignore
Lesson-1/Assignment 1/: README.md  comparision.py  generator.py
Lesson-1/Assignment 2/: selfassessment.txt
Lesson-1/Assignment 4/: .gitignore  ReadMe.md  claude.html  index.html  main.py  oldmain.py  pyproject.toml  requirements.txt  results.json
Lesson-2/Assignment 1- Prompt Optimization Lab/: main.py  prompts.py  readme.md  results-1.json  results.json  test_cases.py
Lesson-2/assignment-2-prompt-security-caching-refactor/: Task-1_static vs dynamic parts.txt  Task-2_prompt to improve caching.txt  Task-3_mitigation strategy.txt  main.py  pyproject.toml  readme.md
Lesson-2/assignment-2-prompt-security-caching-refactor/templates/: index.html
Lesson-3/Assignment-1/: L3-A1-PPT.pptx
Lesson-4/Assignment-1/: .gitignore  README.md  agent.py  app.py  presidio_research_agent_ui.html  pyproject.toml  questions.txt  requirements.txt
Lesson-4/Assignment-1/data/: ai_compliance_policy.txt  hiring_trends_internal.txt  hr_policy.txt  insurance_operations_notes.txt  parental_leave_policy.txt  q1_customer_feedback.txt  remote_work_policy.txt
Lesson-4/Assignment-1/mcp_server/: google_docs_server.py
Lesson-4/Assignment-1/mcp_servers/: google_docs_server.py  rag_server.py  web_search_server.py
Lesson-4/Assignment-1/rag/: rag_tool.py  vectorize.py
Lesson-4/Assignment-1/tests/: test_google_docs.py  test_mcp_tool.py  test_rag.py  test_web.py
Lesson-4/Assignment-1/tools/: mcp_tool.py  web_search_tool.py
Lesson-5/Assignment-1/: main.py  test_email.py
(+29 files in other folders)
