[project]
name = "assignment-2-prompt-security-caching-refactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "openai>=2.35.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
