[project]
name = "assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.1.20",
    "langchain-openai==0.1.7",
    "langchain-community==0.0.38",
    "langchain-pinecone==0.1.1",
    "pinecone-client==3.2.2",
    "openai==1.30.1",
    "tavily-python==0.3.3",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "mcp==1.8.0",
    "httpx",
    "python-dotenv",
    "tiktoken",
    "pypdf"
]